# EdgeViewer

./: README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgeviewer/: MainActivity.java  MyGLRenderer.java
app/src/main/res/layout/: activity_main.xml
web/: index.html  package.json  tsconfig.json
web/src/: main.ts
